--- a/pateldata/package.json
+++ b/pateldata/package.json
@@ -31,6 +31,7 @@
     "@angular/forms": "^20.2.0",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "@angular/cli": "^20.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
